--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import url(./styles/reset.scss);
+
+.products--grid{
+    app-img{
+        img{
+            border-radius: 10px;
+        }
+    }
+}
