--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -7,12 +7,14 @@
 <p>
     Hoy: {{ today | date:'short' }}
 </p>
-<p>
-    Fecha: {{ date | timeAgo }}
-</p>
-<p>
-{{ 'NNninOUOhchOHohIH' | reverse  }}
-</p>
+<button (click)="toggleProductDetail()">Abrir contenido</button>
 <div class="products--grid">
-    <app-product (addedProduct)="onAddToShoppingCart($event)" [product]="product" *ngFor="let product of product2" ></app-product>
+    <app-product (showDetail)="onShowDetail($event)" (addedProduct)="onAddToShoppingCart($event)" [product]="product" *ngFor="let product of product2" ></app-product>
+</div>
+
+<div class="product-detail" [class.active]="showProductDetail">
+    <div>
+        <button (click)="toggleProductDetail()">Close</button>
+        Contenido
+    </div>
 </div>
