--- a/src/app/components/products/products.component.scss
+++ b/src/app/components/products/products.component.scss
@@ -1,3 +1,21 @@
+.product-detail{
+    position: fixed;
+    top: 0;
+    left: 50%;
+    bottom: 0;
+    right: 0;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    transition: all ease-out .5s;
+    transform: translate(100%);
+    &.active {
+        transform: translateX(0);
+    }
+
+}
+
 .products--grid{
     display: flex;
     flex-direction: column;
