Avance a consumo de servicios

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url(./styles/reset.scss);
-
+@import 'swiper/css/bundle';
 .products--grid{
     app-img{
         img{
