--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,6 +1,7 @@
 <app-img *ngIf="product.images.length > 0" [img]="product.images[0] "></app-img>
 <h2> {{ product.price | currency:'MXN' }} </h2>
 <p> {{product.title}} </p>
+<p *ngIf="product?.taxes" > {{ product?.taxes | currency:'MXN' }} </p>
 <p appHighlight> {{product.description }} </p>
-<button (click)="showDetail()" >Show Detail</button>
+<button (click)="onShowDetail()" >Show Detail</button>
 <button (click)="onAddToCart()" >Add Cart</button>
