--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -7,14 +7,25 @@
 <p>
     Hoy: {{ today | date:'short' }}
 </p>
-<button (click)="toggleProductDetail()">Abrir contenido</button>
+<button (click)="createNewProduct()">Crear un producto</button>
 <div class="products--grid">
-    <app-product (showDetail)="onShowDetail($event)" (addedProduct)="onAddToShoppingCart($event)" [product]="product" *ngFor="let product of product2" ></app-product>
+    <app-product (showProduct)="onShowDetail($event)" (addedProduct)="onAddToShoppingCart($event)" [product]="product" *ngFor="let product of product2" ></app-product>
+    <button (click)="loadMore()" > Cargar más </button>
 </div>
 
 <div class="product-detail" [class.active]="showProductDetail">
-    <div>
+    <div *ngIf="productChosen">
         <button (click)="toggleProductDetail()">Close</button>
-        Contenido
+        <h1>{{ productChosen.title }} </h1>
+        <swiper
+            [slidesPerView]="1"
+        >
+          <ng-template swiperSlide *ngFor="let img of productChosen.images" >
+            <img [src]="img" width="50%" alt="">
+          </ng-template>
+        </swiper>
+        <p> {{ productChosen.description }} </p>
+        <button (click)="updateProduct()" >Editar</button>
+        <button (click)="deleteProduct()" >Delete</button>
     </div>
 </div>
