--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-nav></app-nav>
+<button (click)="createUser()" >Crear Usuario</button>
 <app-products></app-products>
 <hr/>
 <h1>ANGULAR: COMPONENTES Y SERVICIOS</h1>
