--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -32,7 +32,11 @@
             </ul>
         </nav>
         <div class="info">
-            <div class="account">manuel@manuel.com</div>
+            <div class="account">
+                <button *ngIf="!token; else elseBlock" (click)="login()" >Login</button>
+                <ng-template #elseBlock> {{ profile?.email }} </ng-template>
+                <!-- <button (click)="getProfile()" >Obtener el perfil</button> -->
+            </div>
             <div>
                 <a href="">
                     <img src="./assets/svg/icon_shopping_cart.svg" alt="logo">
