--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -1,7 +1,7 @@
 .show-mobile {
     display: block;
     box-shadow: 0px 2px 5px rgb(black, .2);
-    > div {
+    div {
       padding: 1em;
       display: flex;
       justify-content: space-between;
