--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,13 @@
 <app-nav></app-nav>
+<a href="./assets/files/texto.txt" download>Descargar</a>
 <button (click)="createUser()" >Crear Usuario</button>
+<p>
+  <button (click)="downloadPdf()" >Desacargar PDF</button>
+</p>
+<p>
+  <input type="file" (change)="onUpload($event)">
+  <img *ngIf="imgRta" [src]="imgRta">
+</p>
 <app-products></app-products>
 <hr/>
 <h1>ANGULAR: COMPONENTES Y SERVICIOS</h1>
