Modulacion de componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-nav></app-nav>
+
 <a href="./assets/files/texto.txt" download>Descargar</a>
 <button (click)="createUser()" >Crear Usuario</button>
 <p>
@@ -8,7 +8,7 @@
   <input type="file" (change)="onUpload($event)">
   <img *ngIf="imgRta" [src]="imgRta">
 </p>
-<app-products></app-products>
+<!-- <app-products></app-products> -->
 <hr/>
 <h1>ANGULAR: COMPONENTES Y SERVICIOS</h1>
 <hr/>
